--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Event Manager</title>
 </head>
 
-<body>
+<body class="container">
     <div class="headline">Event Manager</div>
     <div class="tabs">
         <div class="tab active" data-tab="tab1">Conferences</div>
